# asdf

./: .gitignore  CMakeLists.txt  main.cpp  print_tree.cpp  something.json  types.schema.json
schema/: something.json  types.schema.json
src/asdf/: array.cpp  array.h  object.cpp  object.h  schema.cpp  schema.h  types.h
src/include/: constexpr_xxhash3.hpp
